# ace-api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 077024522d30_change_bid_attribute_num_val_to_.py  1883228aede5_make_option_value_unique_to_bid_.py  1ba4bf4f01fc_add_initial_tables.py  4ed63c505ea3_change_requests_from_meeting_4_9_24.py  7252e9bc3a01_change_comment_text_field_to_text_data_.py  a9a95f34a19b_add_initial_tables.py  c0e48290a8c3_initialize_tables.py  c1a9b53d63ab_remove_contract_and_bid_type_tables.py  d54eba4b543e_add_default_value_for_update_date.py  fbccb0f8be71_add_initial_tables.py  fd917d4ee91a_initial_tables.py
core/: config.py  deps.py  security.py
crud/: ai.py  bid.py  bid_attribute.py  bid_attribute_option.py  bid_attribute_type.py  bid_status.py  bid_type.py  contract.py  customer.py  customer_contact.py  job_status.py  project.py  role.py  user.py  user_role.py
db/: base.py  db.py  types.py
endpoints/: ai.py  bid.py  customer.py  project.py  role.py  user.py
models/: __init__.py  bid.py  bid_attribute.py  bid_estimate.py  bid_manager.py  comment.py  customer.py  customer_contact.py  project.py  project_manager.py  user.py  user_role.py
models/lookup/: attribute.py  attribute_option.py  attribute_type.py  bid_attribute_option.py  bid_attribute_type.py  bid_status.py  bid_type.py  contract.py  job_status.py  role.py
populate-database/: AI_Sample_Data.xlsx  get_bid_data.py
schemas/: base.py  bid.py  bid_attribute.py  bid_attribute_option.py  bid_attribute_type.py  bid_estimate.py  bid_status.py  bid_type.py  contract.py  customer.py  customer_contact.py  job_status.py  project.py  role.py  token.py  user.py  user_role.py
src/: db.py  main.py
src/db/: init_db.py
src/mysite/mysite/: settings.py
